ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.0.7, 2.1.2
    • Affects Version/s: 1.8.0, 1.8.1
    • Component/s: Internal Code, Storage
    • Environment:
      64bit mongodb sever
      Windows 2003 x64 SP2
      Dell PowerEdge 2900 III.
      24GB RAM
      15k SAS drive
      2.4Ghz quad core

      DB client and server running on same box. DB files on local harddrive.
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I was running a large batch of inserts and mongod crashed with the
      below error. It's running on Windows 2003 x64.
      Tue Apr 12 20:12:55 [conn9] MapViewOfFileEx failed H:/mongo/data/
      TestDB.ns errno:487 Attempt to access invalid address.
      Tue Apr 12 20:12:55 [conn9] TestDB.Hands Assertion failure p db
      \mongommf.cpp 198
      Tue Apr 12 20:12:56 [conn9] dbexception in groupCommit causing
      immediate shutdown: 0 assertion db\mongommf.cpp:198

            Assignee:
            Tad Marshall
            Reporter:
            Conor McCarthy
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: