SERVER-2942 attempt to fix problem with remapPrivateView on windows